

			     BZFlag release notes

BZFlag 1.10.6
-------------

* Add support for aggressive filtering on more platforms - Sean Morrison
* bans based on hostmask (/hostban, ...) when adns is available - Nils McCarthy
* Fixed bug that allowed empty callsigns - Frank Thilo
* server option to disallow autopilot - Nils McCarthy
* Bots drive around corners faster - Frank Thilo
* Bots aim better, try to evade shots - Frank Thilo

BZFlag 1.10.4 "not a smurf"
---------------------------

* Allow user to define quickMessages via the menu system - Frank Thilo
* Defaults vars are written to config but commented out - Dave Brosius
* Added -show and -hide options to bzadmin for messages - Lars Luthman
* Added support for more message types to bzadmin - lan56 @ SF, Lars Luthman
* Added menu with BZDB editor and playerlist to bzadmin curses UI - Lars Luthman
* can freeze tod in client, if allowed, via -time hh:mm:ss - Tupone Alfredo
* Allow variable number of team flags per team with +f bzfs option - Dave Brosius
* Added private and team chat sounds - Sean Morrison
* Specify a world file on the Start Server menu gui - Sean Morrison
* Server sends warning to privmsg sender to an invalid target - Lars Luthman
* bots now fully handle collision check - Tupone Alfredo
* -filterCallsigns filters email too now - Lars Luthman
* allow multiple team flags per team thru -c 5 - Dave Brosius
* -maxidle handles idle / paused players the same - Frank Thilo
* Added optional building density to generated maps - Sean Morrison, Frank Thilo
* Add pause time to /idlestats - Sean Morrison
* Notify players when reassigned to a different team on join - Sean Morrison
* Allow multiple bases per team - Dave Brosius
* Use cyan for observer messages in old console color mode - Frank Thilo
* Config file based auto-identify - Tupone Alfredo, Sean Morrison, Frank Thilo
* List Server checks ip of requesting server - Tupone Alfredo
* AutoPilot does not base path on stealth echo anymore - Dave Brosius