@@ -16,10 +16,6 @@ THESE ARE LOWER PRIORITY
 * Fix the Windows version of bzadmin so that EOF quits the program, like
   the UNIX version (see checkCommand() in StdBothUI.cxx).
 
-* get a curses system working on windows:  try to build bzadmin on Win32
-  using PDCurses (it almost works with the X11 version of PDCurses). It
-  currently only works with stdin/stdout.
-
 * bzflag should use the system-supplied zlib if available. Check in
   configure and use system if it's good.
 
